; ModuleID = '/home/carl/AnghaBench/libevent/test/extr_regress_util.c_ai_find_by_protocol.c'
source_filename = "/home/carl/AnghaBench/libevent/test/extr_regress_util.c_ai_find_by_protocol.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evutil_addrinfo = type { i32, %struct.evutil_addrinfo* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.evutil_addrinfo* @ai_find_by_protocol(%struct.evutil_addrinfo* %0, i32 %1) #0 {
  %3 = alloca %struct.evutil_addrinfo*, align 8
  %4 = alloca %struct.evutil_addrinfo*, align 8
  %5 = alloca i32, align 4
  store %struct.evutil_addrinfo* %0, %struct.evutil_addrinfo** %4, align 8
  store i32 %1, i32* %5, align 4
  br label %6

6:                                                ; preds = %17, %2
  %7 = load %struct.evutil_addrinfo*, %struct.evutil_addrinfo** %4, align 8
  %8 = icmp ne %struct.evutil_addrinfo* %7, null
  br i1 %8, label %9, label %21

9:                                                ; preds = %6
  %10 = load %struct.evutil_addrinfo*, %struct.evutil_addrinfo** %4, align 8
  %11 = getelementptr inbounds %struct.evutil_addrinfo, %struct.evutil_addrinfo* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = load i32, i32* %5, align 4
  %14 = icmp eq i32 %12, %13
  br i1 %14, label %15, label %17

15:                                               ; preds = %9
  %16 = load %struct.evutil_addrinfo*, %struct.evutil_addrinfo** %4, align 8
  store %struct.evutil_addrinfo* %16, %struct.evutil_addrinfo** %3, align 8
  br label %22

17:                                               ; preds = %9
  %18 = load %struct.evutil_addrinfo*, %struct.evutil_addrinfo** %4, align 8
  %19 = getelementptr inbounds %struct.evutil_addrinfo, %struct.evutil_addrinfo* %18, i32 0, i32 1
  %20 = load %struct.evutil_addrinfo*, %struct.evutil_addrinfo** %19, align 8
  store %struct.evutil_addrinfo* %20, %struct.evutil_addrinfo** %4, align 8
  br label %6

21:                                               ; preds = %6
  store %struct.evutil_addrinfo* null, %struct.evutil_addrinfo** %3, align 8
  br label %22

22:                                               ; preds = %21, %15
  %23 = load %struct.evutil_addrinfo*, %struct.evutil_addrinfo** %3, align 8
  ret %struct.evutil_addrinfo* %23
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
